# flight

./: CMakeLists.txt  README.md  flight_plan  flightbase.cpp  flightbase.hpp  initplan  main.cpp
data/: excel_conver.py  flight_plan.csv
src/: CMakeLists.txt  calendar_element.cpp  calendar_element.hpp  flight_base.cpp  flight_base.hpp
